# KotlinAndroid

./: build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/carter/androiddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/carter/androiddemo/: Java2CJNI.java  MyApplication.kt
app/src/main/java/com/carter/androiddemo/base/activity/: AbstractSimpleActivity.kt  BaseActivity.kt
app/src/main/java/com/carter/androiddemo/base/fragment/: AbstractSimpleFragment.kt  BaseFragment.kt
app/src/main/java/com/carter/androiddemo/base/presenter/: BasePresenter.kt  IPresenter.kt
app/src/main/java/com/carter/androiddemo/base/view/: IView.kt
app/src/main/java/com/carter/androiddemo/core/constant/: Constant.kt
app/src/main/java/com/carter/androiddemo/core/data/: DataManager.kt
app/src/main/java/com/carter/androiddemo/core/db/: DBHelper.kt  DBHelperImpl.kt
app/src/main/java/com/carter/androiddemo/core/greenDao/: DaoMaster.java  DaoSession.java  HistoryData.java  (+1 more)
app/src/main/java/com/carter/androiddemo/utils/: CacheUtil.kt  CommenUtil.kt  GlideUtil.kt  RxUtil.kt  RxUtils.java  ToastUtil.kt
app/src/main/java/com/carter/androiddemo/widget/: AnimatorUtil.kt
app/src/main/jni/: Java2C.c  com_carter_androiddemo_Java2CJNI.h
app/src/main/res/layout/: activity_login.xml  activity_main.xml  content_main.xml  fragment_project.xml  loading_progressbar.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/carter/androiddemo/: ExampleUnitTest.java
(+22 files in other folders)
